# DeepRecall

./: .env  .gitignore  .npmrc  ARCHITECTURE_DECISION.md  AUTH_DESKTOP_MOBILE_STRATEGY.md  AUTH_MIGRATION_CHECKLIST.md  AUTH_MIGRATION_GUIDE.md  AUTH_SETUP_PHASE2.md  AUTH_TELEMETRY_INTEGRATION.md  BLOB_ARCHITECTURE_ANALYSIS.md  BLOB_CHAT.md  BLOB_CLEANUP_PLAN.md  BLOB_STORAGE_UNIFICATION.md  BLOB_TABLES_ANALYSIS.md  CAPACITOR_MIGRATION_PLAN.md  CODE_REVIEW_MASTER.md  CONFLICT_RESOLUTION_STRATEGY.md  CONSOLE_LOGGING_CONTROL.md  DEPLOY_QUICKSTART.md  DESKTOP_GOOGLE_OAUTH_SUMMARY.md  ELECTRIC_PATTERN.md  ENVIRONMENT_SETUP.md  GUEST_MODE_IMPLEMENTATION_SUMMARY.md  GUEST_USER_UPGRADE.md  GUIDE_CROSS_DEVICE_REACTIVITY.md  GUIDE_DATA_ARCHITECTURE.md  GUIDE_FILES_TO_ASSETS.md  GUIDE_GUEST_SIGN_IN.md  GUIDE_INKING.md  GUIDE_LOGGING.md  GUIDE_MIDDLEWARE.md  GUIDE_NOTES_MODULE.md  GUIDE_OPTIMISTIC_UPDATES.md  GUIDE_RENDER_WHITEBOARD.md  GUIDE_RUNTIME_CONFIG_ROUTING_CORS.md  GUIDE_SYNC_ARCHITECTURE.md  INKING_AIDS_FEATURES.md  INKING_CRITICAL_ISSUES.md  IOS_SETUP_QUICKSTART.md  LICENSE  (+48 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  logger.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  avatars.rs  blobs.rs  database.rs  devtools.rs  mod.rs  oauth_server.rs
apps/desktop/src-tauri/src/db/: catalog.rs  mod.rs  types.rs
backend/: .dockerignore  .env  .strapi-updater.json  Dockerfile  package-lock.json  package.json
data/: cas.db-shm  cas.db-wal
docs/: README_DEV.md
frontend/: .dockerignore  .env  .env.local  (+89 more)
(+916 files in other folders)
