[package]
name = "deeprecall"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deeprecall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1", "with-uuid-1"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
webpki-roots = "0.26"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
mime_guess = "2.0"
dirs = "5.0"
base64 = "0.22"
lazy_static = "1.4"
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"

